2010-03-15  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::editSelectedObject):
	change in the behavior of double click in the tree.  Open rule set
	object in the editor if it is already opened in RuleSetView. If we
	just opened it in RuleSetView, check if the editor is visible and
	if yes, open the object in the editor right away. Fixes #1331

2010-03-13  vadim  <vadim@vk.crocodile.org>

	* using file name for the floating tree panel title. See #1317

	* fixes #1326 MDI subwindow title is left "Untitled" when GUI
	starts with a file on the command line

2010-03-13  Roman Bovsunivkiy <a2k0001@gmail.com>

	* Object tree panel should have title when detached. Fixes #1317

2010-03-08  yalovoy <yalovoy@gmail.com>
	* RuleSetView.cpp: fixes #1315 menu item "Remove from group" is
	available for rules inside the group.
	"Create new group" action is fixed too.
	* fixes #1202: Main menu "Rules" does not match rule context menu
	Items in the main menu Rules should get disabled and enabled just
	like items in the context menu do.
	Affected files: RuleSetView.cpp, RuleSetView.h
	* src/gui/FWWindow.cpp: fixes #1322 main menu items "Rules" are broken

2010-03-07  vadim  <vadim@vk.crocodile.org>

	* FWWindow.cpp (FWWindow::startupLoad): final (hopefully) design
	of the welcome/startup window. Always showing startup tip dialog;
	added buttons to show "Getting started" and "summary of features"
	to the same dialog window. Fixes #1224

	* renamed menu item Help/Welcome to Help/Summary of features.
	fixes #1311

2010-03-07  yalovoy <yalovoy@gmail.com>
	* refs #1202: Main menu "Rules" does not match rule context menu
	Items in the main menu Rules should get disabled and enabled just
	like items in the context menu do.
	Added action: copyRuleAction; cutRuleAction; pasteRuleAboveAction;
     	pasteRuleBelowAction; disableRuleAction; enableRuleAction;
	setColorEmptyAction; setColorRedAction; setColorBlueAction;